--- a/family.html
+++ b/family.html
@@ -28,7 +28,7 @@
 			<img src = "images/badlands.jpg" width="1000" alt = "Three kids standing in front of the National Park">
 			<img src = "images/falling.jpg" width="1000" alt = "A boy holds the edge of the rock">
 			<img src = "images/rushmore.jpg" width="1000" alt = "Rushmore">
-			<img src = "images/jewel_cave.jpg" width="1000" alt = "Jewel Cave National Monument">
+			<img src = "images/jewel_cave.JPG" width="1000" alt = "Jewel Cave National Monument">
 
 		<p>I didn't plan for the fact that the Strugis Motorcycle rally would overlap with our trip.  Many towns were closed to through traffic and the lack of internet required that we use paper maps. Often.</p>
 	</main>
